--- a/GameOfLife.Presentation/MainWindow.axaml
+++ b/GameOfLife.Presentation/MainWindow.axaml
@@ -26,40 +26,42 @@
 
         <ScrollViewer HorizontalScrollBarVisibility="Auto" 
                       VerticalScrollBarVisibility="Auto">
-            <ItemsControl ItemsSource="{Binding BoardViewModel.Cells}">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <UniformGrid Columns="{Binding BoardViewModel.Columns}"
-                                     Rows="{Binding BoardViewModel.Rows}"/>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
+            <Viewbox Stretch="Uniform">
+                <ItemsControl ItemsSource="{Binding BoardViewModel.Cells}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <UniformGrid Columns="{Binding BoardViewModel.Columns}"
+                                         Rows="{Binding BoardViewModel.Rows}"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
 
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate x:DataType="vm:CellViewModel">
-                        <ToggleButton Margin="0"
-                                      Padding="0"
-                                      Width="8"
-                                      Height="8"
-                                      BorderBrush="#CCCCCC"
-                                      BorderThickness="0"
-                                      IsChecked="{Binding IsAlive, Mode=TwoWay}">
-                            <ToggleButton.Styles>
-                                <Style Selector="ToggleButton">
-                                    <Setter Property="Background" Value="White"/>
-                                    <Setter Property="CornerRadius" Value="0"/>
-                                </Style>
-                                <Style Selector="ToggleButton:checked">
-                                    <Setter Property="Background" Value="Black"/>
-                                </Style>
-                                <Style Selector="ToggleButton:pointerover">
-                                    <Setter Property="BorderBrush" Value="#666666"/>
-                                    <Setter Property="BorderThickness" Value="1"/>
-                                </Style>
-                            </ToggleButton.Styles>
-                        </ToggleButton>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate x:DataType="vm:CellViewModel">
+                            <ToggleButton Margin="0"
+                                          Padding="0"
+                                          Width="10"
+                                          Height="10"
+                                          BorderBrush="#CCCCCC"
+                                          BorderThickness="0"
+                                          IsChecked="{Binding IsAlive, Mode=TwoWay}">
+                                <ToggleButton.Styles>
+                                    <Style Selector="ToggleButton">
+                                        <Setter Property="Background" Value="White"/>
+                                        <Setter Property="CornerRadius" Value="0"/>
+                                    </Style>
+                                    <Style Selector="ToggleButton:checked">
+                                        <Setter Property="Background" Value="Black"/>
+                                    </Style>
+                                    <Style Selector="ToggleButton:pointerover">
+                                        <Setter Property="BorderBrush" Value="#666666"/>
+                                        <Setter Property="BorderThickness" Value="1"/>
+                                    </Style>
+                                </ToggleButton.Styles>
+                            </ToggleButton>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </Viewbox>
         </ScrollViewer>
     </DockPanel>
 </Window>
