--- a/GameOfLife.Presentation/MainWindow.axaml
+++ b/GameOfLife.Presentation/MainWindow.axaml
@@ -27,6 +27,30 @@
                     Command="{Binding NextGenerationCommand}"
                     Padding="15,8"
                     FontSize="14"/>
+            
+            <TextBlock Text="Speed (ms):" 
+                       VerticalAlignment="Center"
+                       Margin="20,0,5,0"
+                       FontSize="14"/>
+            
+            <Slider Value="{Binding SpeedMs, Mode=TwoWay}"
+                    Minimum="100"
+                    Maximum="1000"
+                    Width="200"
+                    VerticalAlignment="Center"
+                    TickFrequency="10"
+                    IsSnapToTickEnabled="True"/>
+            
+            <TextBox Text="{Binding SpeedMs, Mode=TwoWay}"
+                     Width="60"
+                     VerticalAlignment="Center"
+                     HorizontalContentAlignment="Center"
+                     FontSize="14"/>
+            
+            <TextBlock Text="ms" 
+                       VerticalAlignment="Center"
+                       Margin="5,0,0,0"
+                       FontSize="14"/>
         </StackPanel>
 
         <ScrollViewer HorizontalScrollBarVisibility="Auto" 
