--- a/GameOfLife.Presentation/Views/NewGameDialog.axaml
+++ b/GameOfLife.Presentation/Views/NewGameDialog.axaml
@@ -2,11 +2,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="500"
+        mc:Ignorable="d" d:DesignWidth="700" d:DesignHeight="600"
         x:Class="GameOfLife.Presentation.Views.NewGameDialog"
         Title="New Game"
-        Width="500"
-        Height="500"
+        Width="700"
+        Height="600"
         WindowStartupLocation="CenterOwner"
         CanResize="false">
     <Grid Margin="20">
@@ -71,7 +71,9 @@
         <Grid Grid.Row="4">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="10"/>
+                <RowDefinition Height="15"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -85,8 +87,25 @@
                        FontSize="16"
                        FontWeight="Bold"/>
             
-            <!-- Birth Conditions -->
-            <StackPanel Grid.Row="2" Grid.Column="0" Spacing="8">
+            <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="15"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                
+                <TextBlock Grid.Column="0"
+                           Text="Preset:"
+                           VerticalAlignment="Center"
+                           FontSize="14"
+                           FontWeight="SemiBold"/>
+                <ComboBox Grid.Column="2"
+                          x:Name="PresetComboBox"
+                          SelectionChanged="PresetComboBox_SelectionChanged"
+                          HorizontalAlignment="Stretch"/>
+            </Grid>
+            
+            <StackPanel Grid.Row="4" Grid.Column="0" Spacing="8">
                 <TextBlock Text="Birth (B) - Neighbor counts for birth:"
                            FontSize="13"
                            FontWeight="SemiBold"/>
@@ -124,8 +143,7 @@
                         Padding="5"/>
             </StackPanel>
             
-            <!-- Survival Conditions -->
-            <StackPanel Grid.Row="2" Grid.Column="2" Spacing="8">
+            <StackPanel Grid.Row="4" Grid.Column="2" Spacing="8">
                 <TextBlock Text="Survival (S) - Neighbor counts for survival:"
                            FontSize="13"
                            FontWeight="SemiBold"/>
